--- a/ApiFlask/static/css/tabla.css
+++ b/ApiFlask/static/css/tabla.css
@@ -8,7 +8,9 @@ table{
     text-align: left;
     width: 100%;
     border-collapse: collapse;
+    
 }
+
 th, td{
     
     padding: 20px;
@@ -103,3 +105,16 @@ h6{
     color: white;
     font-size: 20px;
 }
+.my-custom-scrollbar {
+    position: relative;
+    height: 500px;
+    overflow: auto;
+    background-color: #ddd;
+    text-align: left;
+    width: 100%;
+    border-collapse: collapse;
+    }
+.table-wrapper-scroll-y {
+    display: block;
+    }
+   
