--- a/ApiFlask/templates/Access/index.html
+++ b/ApiFlask/templates/Access/index.html
@@ -86,9 +86,9 @@
 <h2 class="titulo">Acerca de nosotros</h2>
 <div class="cards">
     <div class="card">
-        <img src="static/img/jefferson.jpg" alt="">
+        <img style=" background-size: cover;" src="static/img/jefferson.jpg" alt="">
         <div class="contenido-texto-card">
-            <h4>Jefferson Llumiquinga</h4>
+            <h4 style="color: white;">Jefferson Llumiquinga</h4>
             <p>Tecnólogo en Análisis de Sistemas Informáticos</p>
 
         </div>
@@ -96,7 +96,7 @@
     <div class="card">
         <img src="static/img/iot.jpg" alt="">
         <div class="contenido-texto-card">
-            <h4>Edison Jumbo</h4>
+            <h4 style="color: white;">Edison Jumbo</h4>
             <p>Tecnólogo en Análisis de Sistemas Informáticos</p>
         </div>
     </div>
@@ -107,19 +107,22 @@
     <h2 class="titulo">Nuestros servicios</h2>
     <div class="servicio-cont">
         <div class="servicio-ind">
-            <img src="static/img/iot2.jpg" alt="">
-            <h3>Name</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, qui?</p>
+            <img src="static/img/aplicacion1.jpg" alt="" height="200px" width="200px">
+            <h3 style="color: white;">Wearables</h3>
+            <p>Gafas virtuales, bandas fitness para el monitoreo de gasto calórico y
+                 pulsaciones cardíacas, o cinturones de rastreo GPS.</p>
         </div>
         <div class="servicio-ind">
-            <img src="static/img/iot1.jpg" alt="">
-            <h3>Name</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, qui?</p>
+            <img src="static/img/aplicacion2.jpg" alt="" height="200px" width="200px">
+            <h3 style="color: white;">Salud</h3>
+            <p>Sensores conectados a los pacientes, permite a los médicos el seguimiento
+                 de sus condiciones, fuera del hospital y en tiempo real.</p>
         </div>
         <div class="servicio-ind">
-            <img src="static/img/iot.jpg"alt="">
-            <h3>Name</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, qui?</p>
+            <img src="static/img/aplicacion3.jpg"alt="" height="200px" width="200px">
+            <h3 style="color: white;">Monitoreo de Tráfico</h3>
+            <p>Los teléfonos móviles como sensores, que recolectan y comparten
+             data desde nuestros vehículos a través de aplicaciones como Waze o Google Maps.</p>
         </div>
     </div>
 </div>
