--- a/ApiFlask/templates/Admin/admin_panel.html
+++ b/ApiFlask/templates/Admin/admin_panel.html
@@ -1,14 +1,14 @@
 {% extends "Access/base.html" %}
 {% block content %}
 
-<h1>Panel de administración</h1>
+<h1 style="color: white;">Panel de administración</h1>
 
 <div class="container-fluid" id="main-container">
     <div class="row">
       <div class="col-md-12">
         <div class="card card-plain">
           <div class="card-header">
-            <h4 class="card-title">Lista de Usuarios</h4>
+            <h4 >Lista de Usuarios</h4>
           </div>
           <div class="card-body">
             <div class="table-responsive">
