--- a/ApiFlask/templates/Dashboard/blog.html
+++ b/ApiFlask/templates/Dashboard/blog.html
@@ -1,6 +1,6 @@
 {% extends "Access/base.html" %}{% block content %}
 
-<div class="container"></div>
+
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -24,10 +24,14 @@
                   </div>
               </div>
               <div class="post-body">
-                  <span>1 Septiembre, 2021 | Proyecto Web</span>
-                  <h2>HTML</h2>
-                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates est iusto aperiam quaerat assumenda soluta reprehenderit officiis repudiandae, ipsum quis explicabo ad quisquam incidunt temporibus?</p>
-                  <a href="#" class="post-link">Leer más...</a>
+                  
+                  <h5 class="card-title">El estado general del uso de móviles, Internet y redes sociales</h5>
+                  <p>Ecuador tiene una población total de 17.77 millones de habitantes, siendo el 64,3% 
+                    residentes de zonas urbanizadas.<br>
+                    El número de dispositivos móviles conectados en el país es de 13.82 millones, lo que 
+                    constituye un 77,8% de la población.
+                  </p>
+                  
                 </div>
           </article>
 
@@ -38,10 +42,14 @@
                 </div>
             </div>
             <div class="post-body">
-                <span>1 Septiembre, 2021 | Proyecto Web</span>
-                <h2>HTML</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates est iusto aperiam quaerat assumenda soluta reprehenderit officiis repudiandae, ipsum quis explicabo ad quisquam incidunt temporibus?</p>
-                <a href="#" class="post-link">Leer más...</a>
+                
+              <h5 class="card-title">El crecimiento digital: enero 2020 vs enero 2021</h5>
+                <p>La población incrementó un 1,5%,  mientras que las conexiones móviles han tenido un descenso del 10,1%.
+                  <br>
+                 Sin embargo, se incremento el uso internet de un 1.5%, integrando
+                  a 147.000 de usuarios y se observo el aumento de usuarios de las redes sociales 16.7%,
+                   lo que suma a 2 millones de perfiles nuevos.</p>
+                
               </div>
         </article>
 
@@ -52,10 +60,12 @@
                 </div>
             </div>
             <div class="post-body">
-                <span>1 Septiembre, 2021 | Proyecto Web</span>
-                <h2>HTML</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates est iusto aperiam quaerat assumenda soluta reprehenderit officiis repudiandae, ipsum quis explicabo ad quisquam incidunt temporibus?</p>
-                <a href="#" class="post-link">Leer más...</a>
+                
+              <h5 class="card-title">Resumen general del uso de Internet en Ecuador</h5>
+                <p>Ecuador tiene 10.17 millones usuarios de Internet, es decir, que el 57% 
+                  de la población usa este servicio. En relación a enero del 2020 hubo un 
+                  crecimiento del 1.5%, que es igual a 147 mil nuevos usuarios.</p>
+                
               </div>
         </article>
       </div>
