--- a/ApiFlask/static/css/gestion.css
+++ b/ApiFlask/static/css/gestion.css
@@ -60,7 +60,7 @@
   
   body {
     font-family: 'open sans';
-    background: linear-gradient(rgba(47, 23, 15, 0.76), rgba(47, 23, 15, 0.685)), url("../img/iot.jpg");
+    background: linear-gradient(rgba(47, 23, 15, 0.76), rgba(47, 23, 15, 0.685)), url("../img/principal.jpg");
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
@@ -93,7 +93,7 @@
   
   nav{
       text-align: center;
-      background-color: var(--color-info-700);
+      background-color: rgba(0, 0, 0, 0.1);
       color: var(--color-info-100);
       border: 50px;
       padding-bottom: 150px;
@@ -184,7 +184,7 @@
   
   
   .portafolio{
-    background-color: var(--color-info-700);
+    background-color: rgba(0, 0, 0, 0.1);
   }
   
   .galeria-port{
@@ -249,7 +249,7 @@
   }
   
   .cards .card{
-    background: var(--color-info-700);
+    background: rgba(0, 0, 0, 0.1);
     display: flex;
     width: 46%;
     height: 200px;
@@ -283,7 +283,7 @@
   /*  Our servicios */
   
   .about-services{
-    background: var(--color-info-700);
+    background: rgba(0, 0, 0, 0.1);
     padding-bottom: 30px;
   }
   
@@ -518,4 +518,22 @@
           font-size: 20px;
       }
   }
+  .alert{
+    width: 400px;
+    position: absolute;
+    left: 910px;
+    top: 10px;
+    border-radius: 4px;
+    border-left: 4px solid #9b280b;
+  }
+
+  
  
+  .alert.alert-danger{
+    animation: show_slide 1s ease forwards;
+  }
+  @keyframes show_slide {
+    0%{
+      transform: translateX(100%);
+    }
+  }
