--- a/ApiFlask/templates/Access/register.html
+++ b/ApiFlask/templates/Access/register.html
@@ -4,64 +4,63 @@
 {% block content %}
 
 {% if message  %}
-    <div class="alert alert-secondary" role="alert">
-        <p>{{ message }}</p>
-    </div>
+<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+  <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
+    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+  </symbol>
+  <symbol id="info-fill" fill="currentColor" viewBox="0 0 16 16">
+    <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+  </symbol>
+  <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+    <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+  </symbol>
+</svg>
+<div class="alert alert-danger d-flex align-items-center" role="alert">
+  <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+  <div>
+    {{ message }}
+  </div>
+  <span class="close-btn">
+    <span class="fas fa-times"></span>
+  </span>
+</div>
+
 {% endif %}
 
-<form action="" method="post" class="registro">
- <h1>Registrate</h1>
- <div class="contenedor">
-   
-  <div class="input-contenedor">
+<div class="login-box1">
+  <h1>Registrate</h1>
+<form method="post">
+ 
         
-        <i class="fas fa-user icon"></i>
-        <input name="name" class="form-control" id="inputFullName" aria-describedby="emailHelp" placeholder="Ingrese sus nombres completos">
+  <label for="name">Nombres </label>
+  <input type="text" name="name"  class="form-control"  aria-describedby="inputFullName" placeholder="Ingrese sus Nombres">
         
-  </div>
 
-  <div class="input-contenedor">
+  <label for="lastname">Apellidos</label>
+    <input type="text" name="lastname"  class="form-control"  id="inputFullName" aria-describedby="emailHelp" placeholder="Ingrese sus Apellidos">
+
+    <label for="email">Email</label>
+  <input type="text"  name="email" class="form-control" id="InputEmail"  placeholder="Ingrese un email">
         
-    <i class="fas fa-user icon"></i>
-    <input name="lastname" class="form-control" id="inputFullName" aria-describedby="emailHelp" placeholder="Ingrese sus Apellidos completos">
-    
-  </div>
   
-  <div class="input-contenedor">
-        
-        <i class="fas fa-envelope-square icon"></i>
-        <input name="email" class="form-control" id="InputEmail"  placeholder="Ingrese un email">
-        
-  </div>
-
-  <div class="input-contenedor">
-        
-    <i class="fas fa-envelope-square icon"></i>
-    <input name="texto" class="form-control" id="InputEmail"  placeholder="¿Por qué desea usar la aplicación?">
+  <label for="texto">Pregunta</label>
+    <input  type="text" name="texto"  id="InputEmail"  placeholder="¿Por qué desea usar la aplicación?">
     
-</div>
-
-  <div class="input-contenedor">
+    <label for="password1">Contraseña</label>
+    <input type="password" name="password1"  id="InputPassword" placeholder="Su contraseña debe tener mas de 8 caracteres, un numero y al menos un caracter especial">
     
-    <i class="fas fa-key icon"></i>
-    <input type="password" name="password1" class="form-control" id="InputPassword" placeholder="Ingrese la contraseña">
-  </div>
+
+    <label for="password2">Repita su contraseña</label>
+    <input type="password" name="password2" id="InputPassword2" placeholder="Repita la contraseña">
 
 
-    <div class="input-contenedor">
-    
-    <i class="fas fa-key icon"></i>
-    <input type="password" name="password2" class="form-control" id="InputPassword2" placeholder="Repita la contraseña">
+    <input type="submit" value="Registrate">
+        
+    <a href="/login">Tienes una cuenta?</a>
 
-    </div>
-  <button type="submit" class="button">Registrate</button>
-  <p>Al registrarte, aceptas nuestros terminos y condiones</p>
-  <p>¿Ya tienes cuenta?<a class="link" href="/login">Iniciar sesión</a></p>
-
-
-</div>
 </form>
 
+</div>
 
 
 {% endblock %}
