--- a/ApiFlask/templates/Access/register.html
+++ b/ApiFlask/templates/Access/register.html
@@ -46,8 +46,9 @@
   <label for="texto">Pregunta</label>
     <input  type="text" name="texto"  id="InputEmail"  placeholder="¿Por qué desea usar la aplicación?">
     
+
     <label for="password1">Contraseña</label>
-    <input type="password" name="password1"  id="InputPassword" placeholder="Su contraseña debe tener mas de 8 caracteres, un numero y al menos un caracter especial">
+    <input type="password" name="password1"  id="InputPassword" placeholder="Debe tener al menos(1-9, #$@, A-Z)">
     
 
     <label for="password2">Repita su contraseña</label>
