--- a/ApiFlask/templates/Dashboard/busqueda.html
+++ b/ApiFlask/templates/Dashboard/busqueda.html
@@ -1,56 +1,55 @@
 {% extends "Access/base.html" %}{% block content %}
 
-		<div class="col-sm-6">
-			<div class="card bg-dark mb-3" style="width: auto;">
-            <img src="/static/img/iot.jpg" alt="Avatar" style="width:50%">
-            <div class="container_card_ipv4">
-               
-              {% for item in items %}
-              <h4><b>Dirección: {{item.Direccion}}</b></h4>
-              <ul class="list-group">
 
-                <li class="list-group-item">Fecha: {{item.Fecha}} </li>
-                <li class="list-group-item">Pais: {{item.Localizacion.country_name}}</li>
-                <li class="list-group-item">Ciudad: {{item.Localizacion.city}}</li>
-                <li class="list-group-item">Codigo: {{item.Localizacion.region_code}}</li>
-                <li class="list-group-item">Latitud: {{item.Localizacion.latitude}}</li>
-                <li class="list-group-item">Latitud: {{item.Localizacion.longitude}}</li>
-				<li class="list-group-item">********************************</li>
-				<li class="list-group-item">Dominio: {{item.Dominio}}</li>
-				<li class="list-group-item">Dns: {{item.Dns}}</li>
-				<li class="list-group-item">********************************</li>
-				 
-				<li class="list-group-item">Range Ipv4: {{item.Whois.asn_cidr}}</li>
-				<li class="list-group-item">Descripción: {{item.Whois.asn_description}}</li>
+<section class="post-list">
+	<div class="content">
+		{% for item in items %}
+		<article class="post1">
+			
+			<div class="post-body">
 				
-			</ul>
-            </div>
-          </div>
-		</div>
-		  
-		  <div class="row">
-			{% for x in item.puerto %}
-		  <div class="col-sm-4">
-		  <div class="card bg-dark mb-3" style="width: auto;">
-			<img src="/static/img/iot.jpg" class="card-img-top">
-			<div class="card-body bg-dark mb-3">
-				
-				<ul class="list-group list-group-flush">
-					<li class="list-group-item">Puerto: {{x.Puerto}}</li>
-					{% if x.Banner == ""%}
-					<li class="list-group-item"><p>Banner:</p> No hay información</li>
-					{% else %}
-					<li class="list-group-item"><p>Banner:</p> {{x.Banner}}</li>
-					{% endif %}
-					<li class="list-group-item">Vulnerabilidades</li>
-				  </ul>
+				<h5 class="card-title">Dirección: {{item.Direccion}}</h2>
+					<ul class="list-group list-group-flush lista1">
+						<li class="list-group-item">Fecha: {{item.Fecha}} </li>
+						<li class="list-group-item">Pais: {{item.Localizacion.country_name}}</li>
+						<li class="list-group-item">Ciudad: {{item.Localizacion.city}}</li>
+						<li class="list-group-item">Codigo: {{item.Localizacion.region_code}}</li>
+						<li class="list-group-item">Latitud: {{item.Localizacion.latitude}}</li>
+						<li class="list-group-item">Latitud: {{item.Localizacion.longitude}}</li>
+						<li class="list-group-item">Dominio: {{item.Dominio}}</li>
+						<li class="list-group-item">Dns: {{item.Dns}}</li>
+						<li class="list-group-item">Range Ipv4: {{item.Whois.asn_cidr}}</li>
+						<li class="list-group-item">Descripción: {{item.Whois.asn_description}}</li>
+					</ul>
+				  
+			  </div>
+		</article>
+		{% for x in item.puerto %}
+		<article class="post2">
+			
+
+		  <div class="post-header">
+			  <div class="caja-2">
+  
+			  </div>
+		  </div>
+		  <div class="post-body">
+			  
+			<ul class="list-group list-group-flush">
+				<li class="list-group-item">Puerto: {{x.Puerto}}</li>
+				{% if x.Banner == ""%}
+				<li class="list-group-item"><p>Banner:</p> No hay información</li>
+				{% else %}
+				<li class="list-group-item"><p>Banner:</p> {{x.Banner}}</li>
+				{% endif %}
 				
 			</div>
-		  </div>
-		</div>
-		{% endfor %}
+			
+	  </article>
+  	{% endfor %}
+	  {% endfor %}
+
 	</div>
-		  
-		  {% endfor %}
+  </section>
 
 		{% endblock %}
