--- a/ApiFlask/static/css/autenticar.css
+++ b/ApiFlask/static/css/autenticar.css
@@ -143,7 +143,7 @@ p{
 
 .login-box a {
   text-decoration: none;
-  font-size: 12px;
+  font-size: 15px;
   line-height: 20px;
   color: darkgrey;
 }
@@ -197,6 +197,7 @@ p{
   height: 40px;
   color: #fff;
   font-size: 16px;
+  width: 300px;
 }
 
 .login-box1 input[type="text"] {
@@ -230,7 +231,7 @@ p{
 
 .login-box1 a {
   text-decoration: none;
-  font-size: 12px;
+  font-size: 15px;
   line-height: 20px;
   color: darkgrey;
 }
