--- a/ApiFlask/static/css/blog.css
+++ b/ApiFlask/static/css/blog.css
@@ -49,6 +49,27 @@ article{
     background-position: center;
     transition: .2s;
 }
+.post1{
+    box-shadow: 0 1px 6px 1px rgba(0, 0, 0, 1);
+    transition: .2s;
+    width: 700px;
+    
+}
+.post1:hover{
+    transform: translate(-4px);
+    box-shadow: 0 1px 14px 2px rgba(0, 0, 0, -15);
+}
+
+.post2{
+    box-shadow: 0 1px 6px 1px rgba(0, 0, 0, 1);
+    transition: .2s;
+    width: 450px;
+    
+}
+.post2:hover{
+    transform: translate(-4px);
+    box-shadow: 0 1px 14px 2px rgba(0, 0, 0, -15);
+}
 .post{
     box-shadow: 0 1px 6px 1px rgba(0, 0, 0, 1);
     transition: .2s;
@@ -128,4 +149,7 @@ article{
     cursor: pointer;
     transform: scale(1.03);
     transition: all 1s ease;
+}
+.lista1{
+    background: rgba(0, 0, 0, 1);
 }
