--- a/ApiFlask/templates/Mail/active_account.html
+++ b/ApiFlask/templates/Mail/active_account.html
@@ -8,8 +8,9 @@
 <p>Ingresa a la pagina: <a href="http://127.0.0.1:5000/"><strong>Iot Ecuador</strong></a>.</p>
 <p>Si no realizó esta solicitud, simplemente puede ignorar este correo electrónico</p>
 
-<p>Iot Ecuador,
-Administrador: Richar Rivera</p>
-<p>&copy; Edison Jumbo & Jefferson Llumiquinga</p>
+<p><b>Administrador:</b> Richar Rivera</p>
+<p><b>Email:</b> iotecuador2021@gmail.com</p>
+<p>&copy; Iot Ecuador</p>
+
 
 {% endfor %}
