--- a/ApiFlask/templates/Access/base.html
+++ b/ApiFlask/templates/Access/base.html
@@ -10,7 +10,7 @@
     <link href="static/css/autenticar.css" rel="stylesheet">
     <link href="static/css/tabla.css" rel="stylesheet">
     <link href="static/css/blog.css" rel="stylesheet">
-    <link  href="static/css/map.css" rel="stylesheet">
+    <link  href="static/css/detalleip.css" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/9fe26e1c40.js" crossorigin="anonymous"></script>
 
@@ -121,6 +121,7 @@
      <script src="static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
      <script type="src=notificacion.js"></script>
       
+    
    
      
      
